FIX chatbox header rtl align

--- a/public/css/joinchat.css
+++ b/public/css/joinchat.css
@@ -343,6 +343,11 @@
   padding: 0 26px;
   margin: 0;
   background: var(--color);
+  text-align: left;
+}
+
+[dir=rtl] .joinchat__header {
+  text-align: right;
 }
 
 .joinchat--dark .joinchat__header {
